--- a/qms-kiosk-app/package.json
+++ b/qms-kiosk-app/package.json
@@ -1,21 +1,28 @@
 {
   "name": "qms-kiosk-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "expo start",
+    "start": "EXPO_ROUTER_APP_ROOT=../../app expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
+    "react-native": "0.72.4",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-web": "~0.19.6",
+    "expo-router": "^2.0.0",
+    "react-native-screens": "~3.22.0",
+    "expo-linking": "~5.0.2",
+    "expo-constants": "~14.4.2",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
