--- a/qms-kiosk-app/package.json
+++ b/qms-kiosk-app/package.json
@@ -11,18 +11,21 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.11",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "i18next": "^23.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-web": "~0.19.6",
-    "expo-router": "^2.0.0",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
