--- a/qms-kiosk-app/package.json
+++ b/qms-kiosk-app/package.json
@@ -1,13 +1,15 @@
 {
   "name": "qms-kiosk-app",
   "version": "1.0.0",
-  "main": "./index.js",
+  "main": "./index.tsx",
   "scripts": {
-    "start": "EXPO_ROUTER_APP_ROOT=../../app expo start",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "types:check": "tsc"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -26,7 +28,9 @@
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
