--- a/qms-kiosk-app/package.json
+++ b/qms-kiosk-app/package.json
@@ -38,7 +38,9 @@
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
     "uuid": "^9.0.1",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
