--- a/mobile-application/package.json
+++ b/mobile-application/package.json
@@ -15,14 +15,18 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@types/react": "~18.2.14",
     "expo": "~49.0.11",
     "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "i18next": "^23.5.1",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "react": "18.2.0",
@@ -33,14 +37,13 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-i18n": "^2.0.15",
     "react-native-paper": "^5.10.6",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
-    "uuid": "^9.0.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.5"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
