--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,11 +22,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      working-directory: ./mobile-app
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: ./mobile-app/package-lock.json
     - run: cd ./mobile-app && npm lint
     - run: cd ./mobile-app && npm types:check
     - run: cd ./mobile-app && npm types:coverage
