--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,10 @@ jobs:
       matrix:
         node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    
+    defaults:
+      run:
+        working-directory: ./mobile-app
 
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +30,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: ./mobile-app/package-lock.json
-    - run: cd ./mobile-app && npm lint
-    - run: cd ./mobile-app && npm types:check
-    - run: cd ./mobile-app && npm types:coverage
+    - run: npm lint
+    - run: npm types:check
+    - run: npm types:coverage
