--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ./mobile-app
+        working-directory: ./mobile-app/
 
     steps:
     - uses: actions/checkout@v3
@@ -30,6 +30,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: ./mobile-app/package-lock.json
     - run: npm lint
     - run: npm types:check
     - run: npm types:coverage
