--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,8 +29,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: ./mobile-app/package-lock.json
+        # cache: 'npm'
+        # cache-dependency-path: ./mobile-app/package-lock.json
     - run: npm lint
     - run: npm types:check
-    - run: npm types:coverage
+    - run: npm test
