--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ./mobile-app/
+        working-directory: ./mobile-application/
 
     steps:
     - uses: actions/checkout@v3
@@ -29,8 +29,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        # cache: 'npm'
-        # cache-dependency-path: ./mobile-app/package-lock.json
+        cache: 'npm'
+        cache-dependency-path: ./mobile-application/package-lock.json
     - run: npm lint
     - run: npm types:check
     - run: npm test
