--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./mobile-application/package-lock.json
-    - run: npm lint
-    - run: npm types:check
-    - run: npm test
+    - run: npm run lint
+    - run: npm run types:check
+    - run: npm run test
